--- a/pipelines/test/0.1/test.yaml
+++ b/pipelines/test/0.1/test.yaml
@@ -2,6 +2,13 @@ apiVersion: tekton.dev/v1
 kind: Pipeline
 metadata:
   name: "test"
+  labels:
+    app.kubernetes.io/version: "0.1"
+  annotations:
+    tekton.dev/pipelines.minVersion: "0.17.0"
+    tekton.dev/tags: test
+    tekton.dev/displayName: "Test Pipeline"
+    tekton.dev/platforms: "linux/amd64, linux/arm64"
 spec:
   tasks:
     - name: noop-task
