feat: Add description to test pipeline for remote feature demonstration
- Added a `description` field to the `test.yaml` pipeline definition.
- Clarified the purpose of the test pipeline as a demonstration for the remote
pipeline feature.

Signed-off-by: Chmouel Boudjnah <chmouel@chmouel.com>

--- a/pipelines/test/0.1/test.yaml
+++ b/pipelines/test/0.1/test.yaml
@@ -10,6 +10,7 @@ metadata:
     tekton.dev/displayName: "Test Pipeline"
     tekton.dev/platforms: "linux/amd64, linux/arm64"
 spec:
+  description: "A test pipeline to demonstrate that the remote pipeline feature works"
   tasks:
     - name: noop-task
       displayName: Task with no effect
