--- a/stepactions/test/0.1/test.yaml
+++ b/stepactions/test/0.1/test.yaml
@@ -2,6 +2,8 @@ apiVersion: tekton.dev/v1beta1
 kind: StepAction
 metadata:
   name: stepaction-test
+  labels:
+    app.kubernetes.io/version: "0.1"
   annotations:
     tekton.dev/pipelines.minVersion: "0.17.0"
     tekton.dev/tags: test
