feat: Allow configuring exit code for test step action
* Introduced an `exit` parameter for the test step action
* Used the `exit` parameter to control the step action's exit code
* Enabled testing of various step action exit scenarios

Signed-off-by: Chmouel Boudjnah <chmouel@redhat.com>

--- a/stepactions/test/0.1/test.yaml
+++ b/stepactions/test/0.1/test.yaml
@@ -12,6 +12,10 @@ metadata:
 spec:
   description: "A test step action to demonstrate that the remote stepaction feature works"
   image: registry.access.redhat.com/ubi9/ubi-micro
+  params:
+    - name: exit
+      type: string
+      default: "0"
   script: |
     echo "I am a Step Action!!!"
-    exit 0
+    exit $(param.exit)
